// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.loadtest.panelmatch.resourcesetup;

option java_package = "org.wfanet.measurement.loadtest.panelmatch.resourcesetup";
option java_multiple_files = true;

message Resources {
  message Resource {
    string name = 1;

    message ModelProvider {
      bytes authority_key_identifier = 1;
      string display_name = 2;
    }
    message DataProvider {
      bytes authority_key_identifier = 1;
      string display_name = 2;
    }
    oneof resource {
      ModelProvider model_provider = 2;
      DataProvider data_provider = 3;
    }
  }
  repeated Resource resources = 1;
}
